# xion-adventures

./: README.md  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  state.json  tsconfig.json  vite.config.js
backend/: Cargo.toml  justfile  mapTest.json  state.json
backend/artifacts/: account_factory.wasm  checksums.txt  game_handler.wasm  nft.wasm  xion_adventures_hub.wasm
backend/contracts/account_factory/: Cargo.toml
backend/contracts/account_factory/schema/: account_factory.json
backend/contracts/account_factory/schema/raw/: response_to_get_all_info.json
backend/contracts/account_factory/src/: contract.rs  interface.rs  lib.rs  msg.rs
backend/contracts/hub/: Cargo.toml
backend/contracts/hub/examples/: local_daemon.rs  publish.rs  query_map_tile.rs
backend/contracts/hub/schema/: instantiate_msg.json
backend/contracts/hub/schema/raw/: execute.json  response_to_config.json  response_to_map.json  response_to_next_token_id.json  response_to_player_metadata.json
backend/contracts/hub/src/: api.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
backend/contracts/hub/src/handlers/: execute.rs  instantiate.rs  query.rs
backend/contracts/hub/src/ibc/: module_ibc.rs  transfer.rs
backend/contracts/modules/game_handler/: Cargo.toml
backend/contracts/modules/game_handler/schema/: execute_msg.json
backend/contracts/modules/game_handler/schema/abstract/: module-schema.json
backend/contracts/modules/game_handler/schema/raw/: execute.json  response_to_config.json
backend/contracts/modules/game_handler/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
backend/contracts/modules/game_handler/src/handlers/: execute.rs  instantiate.rs  query.rs
backend/contracts/nft/: Cargo.toml
backend/contracts/nft/examples/: publish.rs
backend/contracts/nft/schema/raw/: execute.json  response_to_all_nft_info.json  response_to_get_collection_info_and_extension.json  response_to_nft_info.json
backend/contracts/nft/src/: interface.rs  lib.rs  msg.rs
backend/schema/account_factory/0.1.0/raw/: execute.json  instantiate.json  response_to_get_nft_by_extension.json
backend/schema/game_handler/game-handler/0.1.0/: execute_msg.json
backend/schema/game_handler/game-handler/0.1.0/raw/: instantiate.json
backend/schema/game_handler/game-handler/0.2.2/: instantiate_msg.json  query_msg.json
backend/schema/hub/xion-adventures-hub/0.0.1/: query_msg.json
backend/schema/hub/xion-adventures-hub/0.0.1/abstract/: module-schema.json
backend/schema/hub/xion-adventures-hub/0.0.1/raw/: instantiate.json  query.json
backend/schema/hub/xion-adventures-hub/0.2.1/: execute_msg.json  module-schema.json  query_msg.json
backend/schema/hub/xion-adventures-hub/0.2.1/raw/: query.json
backend/schema/hub/xion-adventures-hub/0.2.2/: execute_msg.json
backend/schema/hub/xion-adventures-hub/0.2.2/abstract/: module-schema.json
backend/schema/hub/xion-adventures-hub/0.2.2/raw/: execute.json
backend/schema/nft/0.1.0/: nft.json
backend/schema/nft/0.1.0/raw/: instantiate.json  query.json  response_to_get_collection_extension_attributes.json
backend/scripts/: schema.sh
frontend/: .eslintrc.json  abstract.config.ts  package.json  pnpm-lock.yaml  user-number-queries.js
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: codegen-contract.tsx
frontend/app/_generated/generated-abstract/: index.ts
frontend/app/_generated/generated-abstract/cosmwasm-codegen/: Cw721Base.client.ts  Cw721Base.message-builder.ts  Cw721Base.react-query.ts  Cw721Base.types.ts  GameHandler.client.ts  GameHandler.message-builder.ts  GameHandler.message-composer.ts  GameHandler.react-query.ts  GameHandler.types.ts  Hub.client.ts  Hub.message-builder.ts  Hub.react-query.ts  Hub.types.ts  XionAdventuresHub.client.ts  XionAdventuresHub.message-builder.ts  XionAdventuresHub.message-composer.ts  XionAdventuresHub.react-query.ts  XionAdventuresHub.types.ts
frontend/app/_lib/: deepEqual.ts
frontend/app/_providers/: abstract.tsx  dev-mod.tsx  graz.tsx
frontend/app/game/: camera.ts  constants.ts  index.ts  initGame.ts  kaplayCtx.ts  localStorage.ts  playerUpdate.ts  renderMap.ts  store.ts  useGameData.tsx  utils.ts  wallet.ts
frontend/app/game/gameplay/: camera.ts  index.ts  kaplayCtx.ts  playerUpdate.ts  renderMap.ts
frontend/app/game/menu/: index.ts
frontend/app/walletComponents/: MovementUpdateTracker.tsx  README.md  TextBox.tsx  XionWallet.tsx  constants.ts  textbox.css  useAccountSetup.tsx  useAdapterAddress.tsx  useAdapterAuthorizedAddresses.tsx  useAuthorizeAddress.tsx  useSimulatePlayerMovement.ts
frontend/app/walletComponents/xion/: accountFactory.tsx  index.tsx  useAbstractXionAccountBase.tsx  useAbstractxionProviderConfig.tsx  useAutoSelectAccountId.tsx  useMetaAccountState.tsx  useReauthenticate.tsx  useXionSender.tsx
map-generation/: Cargo.toml
map-generation/examples/: simple_generation.rs
map-generation/src/: lib.rs
src/: ReactUI.jsx  ReactUI.tsx  constants.ts  initGame.js  initGame.ts  kaplayCtx.ts  main.tsx  store.ts
src/ReactComponents/: MovementUpdateTracker.tsx  XionWallet.tsx
src/game/: playerUpdate.ts  renderMap.ts
src/map/: renderMap.ts
