[workspace]
members = [
    "contracts/hub",
    "contracts/modules/*",
    "contracts/nft",
    "packages/*",
]
resolver = "2"
package.version = "0.2.2"

[workspace.dependencies]

# Internal
xion-adventures-hub = { path = "./contracts/hub", default-features = false }
nft = { path = "./contracts/nft" }
game-handler = { path = "./contracts/modules/game_handler", default-features = false }
map-generation = { path = "./packages/map-generation" }
common = { path = "./packages/common" }
scripts = { path = "./packages/scripts" }


# Dependencies for interface
cw-orch = { version = "0.27.0" }

# External
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.3.7", features = ["derive"] }
thiserror = { version = "1.0.50" }
schemars = "0.8"
semver = { version = "1.0" }
anyhow = "1.0.79"

# Cosmwasm
cosmwasm-std = { version = "2.1.4" }
cosmwasm-schema = { version = "2.1.4" }
cw-controllers = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
cw-asset = { version = "4.0.0" }

# NFTs
cw721-base = { git = "https://github.com/mintthemoon/cw-nfts", branch = "dev" }
cw721-metadata-onchain = { git = "https://github.com/mintthemoon/cw-nfts", branch = "dev" }
cw721 = { git = "https://github.com/mintthemoon/cw-nfts", branch = "dev" }


# Abstract
abstract-app = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04" }
abstract-adapter = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04" }
abstract-sdk = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04" }
abstract-ibc-host = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04", default-features = false }
abstract-interface = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04" }
abstract-client = { git = "https://github.com/AbstractSDK/abstract/", rev = "d7e7e04" }
