[package]
name = "account_factory"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
library = []
schema = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { version = "0.1.0", path = "../../packages/common" }
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-orch = { workspace = true, features = ["daemon"] }
abstract-sdk = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
clap.workspace = true
dotenv.workspace = true
env_logger.workspace = true
