[package]
name = "nft"
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]

[dependencies]
common = { version = "0.1.0", path = "../../packages/common" }
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-orch = { workspace = true, features = ["daemon"] }
cw721.workspace = true

[dev-dependencies]
clap.workspace = true
dotenv.workspace = true
env_logger.workspace = true
