[package]
name = "game-handler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
schema = ["abstract-adapter/schema"]
abstract-interface = ["dep:abstract-interface"]
abstract-client = ["dep:abstract-client"]
semver = ["dep:semver"]
interface = [
    "export",
    "dep:abstract-interface",
    "dep:abstract-client",
    "dep:semver",
]
daemon = ["interface", "cw-orch/daemon"]

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-adapter = { workspace = true }
abstract-client = { workspace = true, optional = true }
abstract-ibc-host = { workspace = true, default-features = false }
abstract-interface = { workspace = true, optional = true }
abstract-sdk.workspace = true
xion-adventures-hub = { workspace = true }
cosmwasm-schema.workspace = true
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
cw-controllers.workspace = true
cw-orch = { workspace = true }
cw-storage-plus.workspace = true
semver = { workspace = true, optional = true }
thiserror.workspace = true
nft = { workspace = true, features = ["library"] }
common = { version = "0.1.0", path = "../../../packages/common" }
map-generation = { version = "0.1.0", path = "../../../packages/map-generation" }
