[package]
name = "game-handler"
version = { workspace = true }
edition = "2021"
resolver = "2"

[[bin]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
schema = ["abstract-adapter/schema"]
abstract-interface = ["dep:abstract-interface"]
abstract-client = ["dep:abstract-client"]
semver = ["dep:semver"]
daemon = ["cw-orch/daemon"]

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-adapter = { workspace = true }
abstract-client = { workspace = true, optional = true }
abstract-ibc-host = { workspace = true, default-features = false }
abstract-interface = { workspace = true, optional = true }
abstract-sdk.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
cw-controllers.workspace = true
cw-orch = { workspace = true }
cw-storage-plus.workspace = true
semver = { workspace = true, optional = true }
thiserror.workspace = true

xion-adventures-hub = { workspace = true }
nft = { workspace = true, features = ["library"] }
common = { workspace = true }
map-generation = { workspace = true }

[dev-dependencies]
xion-adventures-hub = { workspace = true }
